small spacing issue fixed

--- a/css/master.css
+++ b/css/master.css
@@ -68,7 +68,7 @@ header {
   transition: all 0.3s ease-in-out;
   display: flex;
   align-items: center;
-  padding: 30px 0;
+  padding: 20px 0;
 
   &.headroom--unpinned {
     transform: translateY(-100%);
